Agregación del wrap en header y main, 2do intento de arreglar bug nav

--- a/style.css
+++ b/style.css
@@ -77,10 +77,11 @@ div img{
 .collapse{
     font-family: 'Poppins', sans-serif;;
     background-color: rgba(0, 0, 0, 0.0);
+  
 }
 
 .nav-link{
-    display: inline-block;
+    display: flexbox;
 
     font-size: 10px;
     color: black;
@@ -99,6 +100,7 @@ ul li span a{
 
 .navbar{
     background-color: rgba(0, 0, 0, 0.3);
+  
 }
 
 nav div span{
@@ -124,20 +126,20 @@ h3.h3{
 }
 
 .retro-button {
-            display: block;
-            background-color: #00e9d8;
-            color: #fff;
-            border: 2px solid #000;
-            border-radius: 5px;
-            transition: background-color 0.3s, transform 0.3s;
-            cursor: pointer;
-            font-style: italic;
-            margin-top: 10px;
-        }
+  display: inline-block;
+  background-color: #00e9d8;
+  color: #fff;
+  border: 2px solid #000;
+  border-radius: 5px;
+  transition: background-color 0.3s, transform 0.3s;
+  cursor: pointer;
+  font-style: italic;
+  margin: 10px -10px;
+}
 
 .retro-button:hover {
   background-color: #00ffd0;
-  color: #FF5733;
+  color: #ffc107;
   transform: scale(1.1); 
 }
 
@@ -149,3 +151,9 @@ ul.d-flex{
 ul li a{
   margin-top: 30px;
 }
+
+.modal-header{
+  font-family: 'Poppins', sans-serif;
+  text-decoration: underline pri;
+}
+
